--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,17 @@
             "email": "et.coder@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/mbenedek/AdminLTE"
+        }
+    ],
     "require": {
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap": "2.*",
         "cebe/yii2-gravatar": "1.*",
-        "almasaeed2010/adminlte": "~2.0",
+        "almasaeed2010/AdminLTE": "dev-fix-less-references",
         "rmrevin/yii2-fontawesome": "~2.9"
     },
     "autoload": {
