--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "yiisoft/yii2": "2.*",
         "yiisoft/yii2-bootstrap": "2.*",
         "cebe/yii2-gravatar": "1.*",
-        "almasaeed2010/AdminLTE": "dev-fix-less-references",
+        "almasaeed2010/AdminLTE": "dev-master",
         "rmrevin/yii2-fontawesome": "~2.9"
     },
     "autoload": {
